[bugfix] Prevent memory leaks from the XML:DB API (and by extension XML-RPC API) by ensuring that resources used in queries and retrieving documents are correctly cleaned up. See https://github.com/xmldb-org/xmldb-api/issues/251