@@ -89,10 +89,7 @@ import javax.xml.transform.OutputKeys;
 import org.apache.commons.io.output.StringBuilderWriter;
 import org.exist.security.PermissionDeniedException;
 import org.exist.util.Holder;
-import org.exist.xmldb.EXistXQueryService;
-import org.exist.xmldb.LocalCollection;
-import org.exist.xmldb.UserManagementService;
-import org.exist.xmldb.XmldbURI;
+import org.exist.xmldb.*;
 import org.exist.xquery.CompiledXQuery;
 import org.exist.xquery.XQueryContext;
 import org.exist.xquery.XQueryWatchDog;
@@ -104,7 +101,6 @@ import org.xmldb.api.base.CompiledExpression;
 import org.xmldb.api.base.ErrorCodes;
 import org.xmldb.api.base.Resource;
 import org.xmldb.api.base.ResourceIterator;
-import org.xmldb.api.base.ResourceSet;
 import org.xmldb.api.base.XMLDBException;
 import org.xmldb.api.modules.XMLResource;
 import xyz.elemental.mediatype.MediaType;
@@ -348,7 +344,7 @@ public class QueryDialog extends JFrame {
         JLabel label = new JLabel(Messages.getString("QueryDialog.historylabel"));
         historyBox.add(label);
         final JComboBox<String> historyList = new JComboBox<>(history);
-        for (final String query : client.queryHistory) {
+        for (final String query : client.getQueryHistory()) {
             addQuery(query);
         }
         historyList.setSelectedIndex(-1);  // by default - we are not using anything from the history!
@@ -356,7 +352,7 @@ public class QueryDialog extends JFrame {
             if (itemEvent.getStateChange() == ItemEvent.SELECTED) {
                 final JComboBox<String> list = (JComboBox<String>) itemEvent.getSource();
                 final int idx = list.getSelectedIndex();
-                query.setText(client.queryHistory.get(idx));
+                query.setText(client.getQueryHistory().get(idx));
             }
         });
         historyBox.add(historyList);
@@ -593,7 +589,7 @@ public class QueryDialog extends JFrame {
             setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
             long tResult = 0;
             long tCompiled = 0;
-            ResourceSet result = null;
+            EXistResourceSet result = null;
             XQueryContext context = null;
             try {
                 final EXistXQueryService service = (EXistXQueryService) collection.getService("XQueryService", "1.0");
@@ -619,7 +615,7 @@ public class QueryDialog extends JFrame {
                     exprDisplay.setText(writer.toString());
                 }
 
-                result = service.execute(compiled);
+                result = (EXistResourceSet) service.execute(compiled);
                 tResult = System.currentTimeMillis() - t1;
                 runningContext.set(null);
 
@@ -675,6 +671,14 @@ public class QueryDialog extends JFrame {
                         Messages.getString("QueryDialog.queryrunerrormessage") + ": "
                                 + InteractiveClient.getExceptionMessage(e), e);
             } finally {
+                if (result != null) {
+                    try {
+                        result.close();
+                    } catch (final XMLDBException e) {
+                        // ignore error
+                    }
+                }
+
                 if (context != null) {
                     context.runCleanupTasks();
                 }
@@ -685,7 +689,7 @@ public class QueryDialog extends JFrame {
                     } catch (final XMLDBException e) {
                     }
             }
-            if (client.queryHistory.isEmpty() || !client.queryHistory.getLast().equals(xpath)) {
+            if (client.getQueryHistory().isEmpty() || !client.getQueryHistory().get(client.getQueryHistory().size() - 1).equals(xpath)) {
                 client.addToHistory(xpath);
                 client.writeQueryHistory();
                 addQuery(xpath);
@@ -713,8 +717,7 @@ public class QueryDialog extends JFrame {
 
         @Override
         public Void doInBackground() {
-            try {
-                final Collection root = client.getCollection(XmldbURI.ROOT_COLLECTION);
+            try (final Collection root = client.getCollection(XmldbURI.ROOT_COLLECTION)) {
                 getCollections(root, currentCollectionName);
             } catch (final XMLDBException e) {
                 ClientFrame.showErrorMessage(
@@ -746,27 +749,15 @@ public class QueryDialog extends JFrame {
                 publish(root.getName());
             }
 
-            final String[] childCollections = root.listChildCollections();
-            Collection child = null;
-            for (int i = 0; i < childCollections.length; i++) {
-                try {
-                    child = root.getChildCollection(childCollections[i]);
-                } catch (final XMLDBException xmldbe) {
-                    if (xmldbe.getCause() instanceof PermissionDeniedException) {
-                        continue;
-                    } else {
-                        throw xmldbe;
-                    }
-                } catch (Exception npe) {
-                    System.out.println("Corrupted resource/collection skipped: " + child != null ? child.getName() != null ? child.getName() : "unknown" : "unknown");
-                    continue;
-                }
-
-                try {
+            for (final String collectionName : root.listChildCollections()) {
+                try (final Collection child = root.getChildCollection(collectionName)) {
                     getCollections(child, currentCollection);
-                } catch (Exception ee) {
-                    System.out.println("Corrupted resource/collection skipped: " + child != null ? child.getName() != null ? child.getName() : "unknown" : "unknown");
-                    continue;
+                } catch (final XMLDBException e) {
+                    if (!(e.getCause() instanceof PermissionDeniedException)) {
+                        throw e;
+                    }
+                } catch (final Exception e) {
+                    System.out.println("Corrupted resource/collection skipped: " + collectionName);
                 }
             }
         }
